# SSrename

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ssrename/: caption_model.py  cli.py  filename_generator.py  image_loader.py  ocr_engine.py  renamer.py  safety.py  screenshot_type.py
tests/: test_cli.py  test_filename_generator.py  test_image_loader.py  test_renamer_logic.py
