[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssrename"
version = "0.1.0"
description = "CLI tool to automatically rename screenshots using OCR and local vision-language models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Merin Theres Jose" }
]

dependencies = [
  "typer>=0.9",
  "rich>=13.0",
  "easyocr>=1.7",
  "transformers>=4.36",
  "torch",
  "torchvision",
  "Pillow",
  "opencv-python-headless",
  "numpy"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
ssrename = "ssrename.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
